--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -235,7 +235,7 @@
                                             <outlet property="delegate" destination="dKW-hc-NhL" id="6xO-NV-iAa"/>
                                         </connections>
                                     </collectionView>
-                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lUZ-73-XTC">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lUZ-73-XTC" customClass="PhotoDrawObjectDisplayView">
                                         <rect key="frame" x="20" y="-12" width="560" height="560"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
@@ -269,7 +269,7 @@
                                     <constraint firstAttribute="width" constant="200" id="sX9-AL-VTz"/>
                                 </constraints>
                             </view>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zh5-Kc-cgB" customClass="PhotoDrawView">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zh5-Kc-cgB" customClass="PhotoDrawPenView">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoE-ep-eG4">
@@ -280,7 +280,7 @@
                                         </constraints>
                                         <state key="normal" image="Close"/>
                                         <connections>
-                                            <action selector="backAction:" destination="Zh5-Kc-cgB" eventType="touchUpInside" id="RiG-a9-YV5"/>
+                                            <action selector="backAction:" destination="Zh5-Kc-cgB" eventType="touchUpInside" id="XAx-w5-XuI"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sg0-2x-dd8">
@@ -291,7 +291,7 @@
                                         </constraints>
                                         <state key="normal" image="Done"/>
                                         <connections>
-                                            <action selector="doneAction:" destination="Zh5-Kc-cgB" eventType="touchUpInside" id="6WL-S4-HEu"/>
+                                            <action selector="doneAction:" destination="Zh5-Kc-cgB" eventType="touchUpInside" id="zpb-3J-Q9i"/>
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gsE-tO-utS" customClass="SmoothLineView">
@@ -313,7 +313,7 @@
                                     <constraint firstItem="Sg0-2x-dd8" firstAttribute="top" secondItem="Zh5-Kc-cgB" secondAttribute="top" constant="20" id="upG-J5-hHk"/>
                                 </constraints>
                                 <connections>
-                                    <outlet property="canvasView" destination="gsE-tO-utS" id="rM8-ux-9DF"/>
+                                    <outlet property="canvasView" destination="gsE-tO-utS" id="htB-Aa-bzK"/>
                                 </connections>
                             </view>
                         </subviews>
@@ -352,8 +352,8 @@
                     <connections>
                         <outlet property="collectionContainerView" destination="kfz-pT-T9E" id="uYn-cB-lt8"/>
                         <outlet property="collectionView" destination="7vD-hf-90M" id="vgX-qa-46y"/>
-                        <outlet property="drawCanvasView" destination="lUZ-73-XTC" id="MTP-Nw-fI4"/>
-                        <outlet property="drawingCanvasView" destination="Zh5-Kc-cgB" id="cij-Ga-bB5"/>
+                        <outlet property="drawObjectDisplayView" destination="lUZ-73-XTC" id="VrJ-dR-mBU"/>
+                        <outlet property="drawPenView" destination="Zh5-Kc-cgB" id="y28-X3-gr9"/>
                         <outlet property="editMenuButton" destination="Wfh-aY-Vx8" id="ZxV-zy-2ko"/>
                         <segue destination="Xwq-Eq-fPd" kind="show" identifier="moveToPhotoCrop" id="0Xx-6d-1lz"/>
                     </connections>
@@ -502,7 +502,7 @@
                     <connections>
                         <outlet property="collectionView" destination="zLy-VH-rZn" id="Cea-BC-jbo"/>
                         <outlet property="doneButton" destination="zYR-Ek-9jY" id="eLv-V1-3jk"/>
-                        <segue destination="dKW-hc-NhL" kind="show" identifier="moveToPhotoEditor" id="BwI-io-4kG"/>
+                        <segue destination="dKW-hc-NhL" kind="show" identifier="moveToPhotoEditor" id="qc0-gV-TLa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UAg-L9-3zb" userLabel="First Responder" sceneMemberID="firstResponder"/>
