--- a/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="urh-dS-bEg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dKW-hc-NhL">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -52,6 +52,7 @@
                                     <constraint firstAttribute="width" constant="200" id="aK9-g7-42F"/>
                                     <constraint firstAttribute="height" constant="200" id="wSd-cQ-fab"/>
                                 </constraints>
+                                <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -289,31 +290,46 @@
                                     <constraint firstAttribute="width" constant="200" id="sX9-AL-VTz"/>
                                 </constraints>
                             </view>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zh5-Kc-cgB" customClass="PhotoDrawPenView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zh5-Kc-cgB" customClass="PhotoDrawPenView">
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoE-ep-eG4">
-                                        <rect key="frame" x="20" y="20" width="45" height="45"/>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QzL-H7-SyN">
+                                        <rect key="frame" x="0.0" y="466" width="600" height="70"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="45" id="8n5-mO-F6e"/>
-                                            <constraint firstAttribute="width" constant="45" id="ts2-hb-kbD"/>
+                                            <constraint firstAttribute="height" constant="70" id="XR2-Ll-8SP"/>
                                         </constraints>
-                                        <state key="normal" image="Close"/>
-                                        <connections>
-                                            <action selector="backAction:" destination="Zh5-Kc-cgB" eventType="touchUpInside" id="XAx-w5-XuI"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sg0-2x-dd8">
-                                        <rect key="frame" x="535" y="20" width="45" height="45"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="45" id="f6Q-JH-geB"/>
-                                            <constraint firstAttribute="height" constant="45" id="ghv-l8-g4q"/>
-                                        </constraints>
-                                        <state key="normal" image="Done"/>
-                                        <connections>
-                                            <action selector="doneAction:" destination="Zh5-Kc-cgB" eventType="touchUpInside" id="zpb-3J-Q9i"/>
-                                        </connections>
-                                    </button>
+                                        <items>
+                                            <barButtonItem image="Close" id="9bR-89-scM">
+                                                <connections>
+                                                    <action selector="tappedCancelButton:" destination="Zh5-Kc-cgB" id="keF-UW-GRv"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="tRB-jI-5MS"/>
+                                            <barButtonItem image="Palette" id="Rlp-5t-BZe">
+                                                <connections>
+                                                    <action selector="tappedPaletteButton:" destination="Zh5-Kc-cgB" id="xdY-uQ-CHY"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="ngB-g6-6PH"/>
+                                            <barButtonItem image="LineWidth" id="xAI-wB-1uf">
+                                                <connections>
+                                                    <action selector="tappedLineWidthButton:" destination="Zh5-Kc-cgB" id="MAw-kl-LKD"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="tw1-60-KbB"/>
+                                            <barButtonItem image="Eraser" id="d0N-50-ppk">
+                                                <connections>
+                                                    <action selector="tappedEraserButton:" destination="Zh5-Kc-cgB" id="cC6-om-s3L"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="oNQ-sd-kX4"/>
+                                            <barButtonItem image="Done" id="q5b-Q3-Vti">
+                                                <connections>
+                                                    <action selector="tappedDoneButton:" destination="Zh5-Kc-cgB" id="KBu-QR-RZv"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </items>
+                                    </toolbar>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gsE-tO-utS" customClass="SmoothLineView">
                                         <rect key="frame" x="10" y="-22" width="580" height="580"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -323,14 +339,12 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="Sg0-2x-dd8" secondAttribute="trailing" constant="20" id="4tZ-v4-zXN"/>
-                                    <constraint firstItem="aoE-ep-eG4" firstAttribute="leading" secondItem="Zh5-Kc-cgB" secondAttribute="leading" constant="20" id="LbJ-8f-Hkt"/>
+                                    <constraint firstItem="QzL-H7-SyN" firstAttribute="width" secondItem="Zh5-Kc-cgB" secondAttribute="width" id="18z-wc-jBk"/>
+                                    <constraint firstItem="QzL-H7-SyN" firstAttribute="centerX" secondItem="Zh5-Kc-cgB" secondAttribute="centerX" id="2EH-89-dbn"/>
                                     <constraint firstItem="gsE-tO-utS" firstAttribute="centerX" secondItem="Zh5-Kc-cgB" secondAttribute="centerX" id="Mqv-WY-qfc"/>
                                     <constraint firstItem="gsE-tO-utS" firstAttribute="centerY" secondItem="Zh5-Kc-cgB" secondAttribute="centerY" id="Qgz-fb-fNg"/>
                                     <constraint firstItem="gsE-tO-utS" firstAttribute="leading" secondItem="Zh5-Kc-cgB" secondAttribute="leading" constant="10" id="T0A-Is-vMd"/>
-                                    <constraint firstItem="aoE-ep-eG4" firstAttribute="top" secondItem="Zh5-Kc-cgB" secondAttribute="top" constant="20" id="kDc-CC-U2Q"/>
                                     <constraint firstAttribute="trailing" secondItem="gsE-tO-utS" secondAttribute="trailing" constant="10" id="qiS-4Z-mPp"/>
-                                    <constraint firstItem="Sg0-2x-dd8" firstAttribute="top" secondItem="Zh5-Kc-cgB" secondAttribute="top" constant="20" id="upG-J5-hHk"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="canvasView" destination="gsE-tO-utS" id="htB-Aa-bzK"/>
@@ -345,6 +359,7 @@
                             <constraint firstItem="kfz-pT-T9E" firstAttribute="top" secondItem="JaJ-32-eok" secondAttribute="bottom" id="OH2-Kx-Zes"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Wfh-aY-Vx8" secondAttribute="trailing" constant="-80" id="OPN-Hz-Lry"/>
                             <constraint firstAttribute="trailing" secondItem="Zh5-Kc-cgB" secondAttribute="trailing" id="P0g-LX-KCz"/>
+                            <constraint firstItem="uyW-Ko-FP5" firstAttribute="top" secondItem="QzL-H7-SyN" secondAttribute="bottom" id="aV6-iy-jsR"/>
                             <constraint firstItem="uyW-Ko-FP5" firstAttribute="top" secondItem="Zh5-Kc-cgB" secondAttribute="bottom" id="ioP-Aa-f3A"/>
                             <constraint firstAttribute="trailing" secondItem="kfz-pT-T9E" secondAttribute="trailing" id="pxH-kK-tJg"/>
                             <constraint firstItem="uyW-Ko-FP5" firstAttribute="top" secondItem="kfz-pT-T9E" secondAttribute="bottom" id="uJF-q3-FeH"/>
@@ -644,7 +659,10 @@
         <image name="Delete" width="50" height="50"/>
         <image name="Done" width="50" height="50"/>
         <image name="Downloading" width="50" height="50"/>
+        <image name="Eraser" width="50" height="50"/>
+        <image name="LineWidth" width="50" height="50"/>
         <image name="Modify" width="50" height="50"/>
+        <image name="Palette" width="50" height="50"/>
         <image name="Save" width="50" height="50"/>
         <image name="Share" width="50" height="50"/>
     </resources>
